--- a/style.css
+++ b/style.css
@@ -3,3 +3,56 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+ 
+nav {
+  color: blue;
+  background-color: lightgrey;
+  justify-content: space-evenly;
+  display: flex;
+  height: 20px;
+  align-items: center;
+  top: 0;
+  left: 0;
+  border: none;
+  flex-wrap: wrap;
+  border-radius: 1px; 
+  padding: 10px;
+  
+}
+
+.mainimage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; 
+}
+figcaption {
+  text-align: center;
+  font-size: small;
+}
+
+p {
+  width: 800px;
+  text-align: center;
+  height: 80px;
+  margin: auto;
+
+}
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
